# OutlookOrganiser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PERFORMANCE_REVIEW_CHAT_ASSISTANT.md  PRINCIPLES.md  README.md  docker-compose.yaml  pyproject.toml
Reference/: MicrosoftGraphAPITaskTracking.md  roadmap.md
Reference/spec/: 01-overview.md  02-config-and-schema.md  03-agent-behaviors.md  04-prompts.md  05-graph-api.md  06-safety-and-testing.md  07-setup-guide.md  08-classification-chat.md  09-architecture-decisions.md  10-native-task-integration.md
Reference/working-examples/: config.py  graph_client.py  rate_limiter.py
config/: config.yaml.example
guides/: 01-azure-setup.md  02-installation.md  03-first-run.md  04-daily-usage.md  05-troubleshooting.md  PHASE_2_INTELLIGENCE.md  PHASE_2_REVIEW_FINDINGS.md  PHASE_3_AUTONOMY.md  PHASE_4_ADVANCED.md  README.md
src/assistant/: __main__.py  cli.py  config.py  config_schema.py
src/assistant/auth/: __init__.py  msal_auth.py
src/assistant/chat/: __init__.py  assistant.py  prompts.py  tools.py
src/assistant/classifier/: __init__.py  auto_rules.py  bootstrap_prompts.py  claude_classifier.py  preference_learner.py  prompts.py  snippet.py
src/assistant/core/: errors.py  logging.py  rate_limiter.py
src/assistant/db/: __init__.py  models.py  store.py
src/assistant/engine/: __init__.py  bootstrap.py  digest.py  dry_run.py  thread_utils.py  triage.py  waiting_for.py
src/assistant/graph/: __init__.py  client.py  folders.py  messages.py  tasks.py
src/assistant/web/: __init__.py  app.py  dependencies.py  routes.py
src/assistant/web/static/: style.css
src/assistant/web/templates/: _suggestion_card.html  base.html  config.html  dashboard.html  log.html  review.html  senders.html  stats.html  waiting.html
tests/: conftest.py  test_auto_rules_extended.py  test_bootstrap.py  test_bootstrap_prompts.py  test_category_bootstrap.py  test_chat_assistant.py  test_chat_endpoint.py  test_chat_tools.py  test_config_write.py  test_db.py  test_degradation.py  test_delta_queries.py  test_digest.py  test_dry_run.py  test_graph_tasks.py  test_immutable_ids.py  test_preference_learner.py  test_senders_page.py  test_snippet.py  test_stats_dashboard.py  test_suggestion_queue.py  test_task_sync_store.py  test_thread_utils.py  test_triage.py  test_waiting_for_tracker.py  test_web_routes.py
